feat: pokemon detail with moves

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Pokemon</string>
     <string name="app_loading">Loading…</string>
+    <string name="app_pokemon_id">#%s</string>
+    <string name="app_pokemon_moves">Moves</string>
+    <string name="app_pokemon_level">Lv%1s: %2s</string>
 </resources>
