--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="app_pokemon_id">#%s</string>
     <string name="app_pokemon_moves">Moves</string>
     <string name="app_pokemon_level">Lv%1s: %2s</string>
+    <string name="app_pokemon_owned">Owned</string>
 </resources>
